bpo-28087: Detect broken poll() on macOS Sierra

On macOS, check for broken poll() at runtime on macOS Sierra
16.0.x-16.5.x.

Disable select.poll() (remove select.poll) if poll() is broken.

Reenable select.poll() tests in test_asyncore and test_eintr
on macOS.